color chnaging scroll effect

--- a/index.html
+++ b/index.html
@@ -1,47 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Backstage Talks, Frontend Practice</title>
-</head>
-<body class="body">
+  </head>
+  <body class="body">
     <h1>BACKSTAGE TALKS</h1>
     <div class="content">
-        <div class="issue">
-        <img src="backstagetalks_cover_issue_3.png" alt="a book">
+      <div class="issue" data-color="#ffbe00">
+        <img src="backstagetalks_cover_issue_3.png" alt="a book" />
         <div class="context">
-            <p>Issue #3</p>
-            <a class="btn" href="https://brot.sk/products/pre-order-backstage-talks-issue-8">BUY HERE</a>
-            <p>or in <a class="p_btn" href="http://backstagetalks.com/stocklist.php">selected stories</a></p>
-        </div> 
+          <p>Issue #3</p>
+          <a
+            class="btn"
+            href="https://brot.sk/products/pre-order-backstage-talks-issue-8"
+            >BUY HERE</a
+          >
+          <p>
+            or in
+            <a class="p_btn" href="http://backstagetalks.com/stocklist.php"
+              >selected stories</a
+            >
+          </p>
         </div>
-        <div class="issue">
-            <img src="backstagetalks_cover_issue_4.png" alt="a book">
-            <div class="context">
-                <p>Issue #3</p>
-                <a class="btn" href="https://brot.sk/products/pre-order-backstage-talks-issue-8">BUY HERE</a>
-                <p>or in <a class="p_btn" href="http://backstagetalks.com/stocklist.php">selected stories</a></p>
-            </div> 
-            </div>
-            <div class="issue">
-                <img src="backstagetalks_cover_issue_6.png" alt="a book">
-                <div class="context">
-                    <p>Issue #3</p>
-                    <a class="btn" href="https://brot.sk/products/pre-order-backstage-talks-issue-8">BUY HERE</a>
-                    <p>or in <a class="p_btn" href="http://backstagetalks.com/stocklist.php">selected stories</a></p>
-                </div> 
-                </div>
-                <div class="issue">
-                    <img src="backstagetalks_cover_issue_7.png" alt="a book">
-                    <div class="context">
-                        <p>Issue #3</p>
-                        <a class="btn" href="https://brot.sk/products/pre-order-backstage-talks-issue-8">BUY HERE</a>
-                        <p>or in <a class="p_btn" href="http://backstagetalks.com/stocklist.php">selected stories</a></p>
-                    </div> 
-                    </div>
+      </div>
+      <div class="issue" data-color="#ff651a">
+        <img src="backstagetalks_cover_issue_4.png" alt="a book" />
+        <div class="context">
+          <p>Issue #3</p>
+          <a
+            class="btn"
+            href="https://brot.sk/products/pre-order-backstage-talks-issue-8"
+            >BUY HERE</a
+          >
+          <p>
+            or in
+            <a class="p_btn" href="http://backstagetalks.com/stocklist.php"
+              >selected stories</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="issue" data-color="white">
+        <img src="backstagetalks_cover_issue_6.png" alt="a book" />
+        <div class="context">
+          <p>Issue #3</p>
+          <a
+            class="btn"
+            href="https://brot.sk/products/pre-order-backstage-talks-issue-8"
+            >BUY HERE</a
+          >
+          <p>
+            or in
+            <a class="p_btn" href="http://backstagetalks.com/stocklist.php"
+              >selected stories</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="issue" data-color="pink">
+        <img src="backstagetalks_cover_issue_7.png" alt="a book" />
+        <div class="context">
+          <p>Issue #3</p>
+          <a
+            class="btn"
+            href="https://brot.sk/products/pre-order-backstage-talks-issue-8"
+            >BUY HERE</a
+          >
+          <p>
+            or in
+            <a class="p_btn" href="http://backstagetalks.com/stocklist.php"
+              >selected stories</a
+            >
+          </p>
+        </div>
+      </div>
+      <div class="issue" data-color="#e30512">
+        <img src="backstagetalks_cover2016_2.png" alt="a book" />
+        <div class="context">
+          <p>Issue #3</p>
+          <a
+            class="btn"
+            href="https://brot.sk/products/pre-order-backstage-talks-issue-8"
+            >BUY HERE</a
+          >
+          <p>
+            or in
+            <a class="p_btn" href="http://backstagetalks.com/stocklist.php"
+              >selected stories</a
+            >
+          </p>
+        </div>
+      </div>
     </div>
-    <script>app.js</script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
