--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>BACKSTAGE TALKS</h1>
     <div class="content">
       <div class="issue" data-color="#ffbe00">
-        <img src="backstagetalks_cover_issue_3.png" alt="a book" />
+        <img class="show" src="backstagetalks_cover_issue_3.png" alt="a book" />
         <div class="context">
           <p>Issue #3</p>
           <a
