--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
         </div>
       </div>
     </div>
+    <h3>
+      Backstage Talks is a magazine <br />of casual, but in depth dialogues<br />
+      on design and business. Our <br />decisions shape and influence this<br>
+      complex world—to have a chance<br> to make the right ones, we need to talk.
+    </h3>
     <script src="app.js"></script>
   </body>
 </html>
